brat/test/golden/error/fanin-list.brat
f(Bool, Bool) -> List(Bool)
f = { [\/] }
