brat/test/golden/error/fanin-list.brat.golden
Error in test/golden/error/fanin-list.brat on line 2:
f = { [\/] }
    ^^^^^^^^

  Type error: Fanin ([\/]) only applies to Vec

